# SPY-tracker

./: .env.example  .env.production  .gitignore  AI_PREDICTION_DEMO.md  CLAUDE.md  DEPLOYMENT_STATUS.md  Dockerfile  LIVE_AI_DEMO.md  README.md  SPY-tracker-PRD.md  build.sh  docker-compose.yml  index.html  monitor.sh  nixpacks.toml  package.json  railway.toml  render.yaml  restart.sh  spy_tracker.db  start-production.sh  start.sh  test-connectivity.html  test_ai_predictions.py  test_gpt5.py  test_gpt5_debug.py  test_gpt5_json.py  test_gpt5_low.py  test_gpt5_simple.py  test_real_predictions.py  tsconfig.app.json  vercel.json  vite.config.ts
backend/: .env.example  .env.postgres.example  Procfile  README.md  cleanup_duplicates.py  fix_duplicates.py  migration_pr11.py  pyproject.toml  requirements.txt  schema_before_migration.sql  spy_tracker.db  test_data_handling.py
backend/app/: __init__.py  accuracy_metrics.py  ai_endpoints.py  ai_prediction_service.py  ai_predictor.py  baseline_model.py  capture.py  config.py  database.py  exceptions.py  historical_simulation.py  main.py  migration_runner.py  models.py  pl_calculations.py  providers.py  scheduler.py  schemas.py  startup.py  suggestions.py  timezone_utils.py
backend/app/migrations/: 001_add_ai_prediction_unique_constraint.sql
backend/app/routers/: __init__.py  admin.py  ai.py  market.py  scheduler.py  (+2 more)
backend/migrations/: add_prompt_version.py
backend/static/: index.html
backend/tests/: __init__.py  test_admin_endpoints.py  test_database_postgres.py  test_providers.py  test_scheduler.py  test_timezone_utils.py
(+57 files in other folders)
