[project]
name = "spy-ta-tracker"
version = "0.1.0"
description = "SPY TA Tracker backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<0.116",
  "uvicorn[standard]>=0.30,<0.32",
  "SQLAlchemy>=2.0,<2.1",
  "pydantic>=2.9,<2.12",
  "pydantic-settings>=2.3,<2.6",
  "python-dotenv>=1.0,<2.0",
  "APScheduler>=3.10,<4.0",
  "yfinance>=0.2.65,<0.3",
  "httpx>=0.27,<0.28",
  "openai>=1.46.0,<2.0",
  "numpy>=2.2.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
]


